// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select[Base] should render correctly  1`] = `
<div>
  <div
    class="ciyxmva soui-select-wrapper-empty c-g0otbt soui-select-wrapper c-1dc6w5 soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-2xyfkm soui-select-result-wrapper c-y7dtsv soui-select-wrapper-padding-box c871afg soui-select-wrapper-inner-title-top c8lgj6c soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="c-uki5av soui-select-result"
      >
        <div
          class="c-k3uev7 soui-select-result-text-wrapper"
        >
          <span
            class="c-8qwcyh soui-select-placeholder c-wwn3j7 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-2u7g36 soui-select-icon-wrapper"
      >
        <span
          class="c2o2fpy soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about absolute 1`] = `
<div
  style="padding: 10px; height: 100px; width: 100%; overflow: hidden;"
>
  <div
    class="ciyxmva soui-select-wrapper-empty c-g0otbt soui-select-wrapper c-1dc6w5 soui-select-clearable"
    data-soui-input-border="true"
    style="width: 120px;"
    tabindex="0"
  >
    <div
      class="c-2xyfkm soui-select-result-wrapper c-y7dtsv soui-select-wrapper-padding-box c871afg soui-select-wrapper-inner-title-top c8lgj6c soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="c-uki5av soui-select-result"
      >
        <div
          class="c-k3uev7 soui-select-result-text-wrapper"
        >
          <span
            class="c-8qwcyh soui-select-placeholder c-wwn3j7 soui-select-ellipsis"
          >
            <span>
              default
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-2u7g36 soui-select-icon-wrapper"
      >
        <span
          class="c2o2fpy soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ciyxmva soui-select-wrapper-empty c-g0otbt soui-select-wrapper c-1dc6w5 soui-select-clearable c-p7ptgk soui-select-multiple"
    data-soui-input-border="true"
    style="width: 300px; margin-left: 16px;"
    tabindex="0"
  >
    <div
      class="c-2xyfkm soui-select-result-wrapper c-y7dtsv soui-select-wrapper-padding-box c871afg soui-select-wrapper-inner-title-top c8lgj6c soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="c-uki5av soui-select-result"
      >
        <div
          class="c-k3uev7 soui-select-result-text-wrapper c-altuh2 soui-select-multiple-result-wrapper"
        >
          <span
            class="c-8qwcyh soui-select-placeholder c-wwn3j7 soui-select-ellipsis"
          >
            <span>
              Select user
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-2u7g36 soui-select-icon-wrapper"
      >
        <span
          class="c2o2fpy soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about autoAdapt 1`] = `
<div>
  <div
    class="ciyxmva soui-select-wrapper-empty c-g0otbt soui-select-wrapper c-1dc6w5 soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-2xyfkm soui-select-result-wrapper c-y7dtsv soui-select-wrapper-padding-box c871afg soui-select-wrapper-inner-title-top c8lgj6c soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="c-uki5av soui-select-result"
      >
        <div
          class="c-k3uev7 soui-select-result-text-wrapper"
        >
          <span
            class="c-8qwcyh soui-select-placeholder c-wwn3j7 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-2u7g36 soui-select-icon-wrapper"
      >
        <span
          class="c2o2fpy soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about big data 1`] = `
<div>
  <div
    class="ciyxmva soui-select-wrapper-empty c-g0otbt soui-select-wrapper c-1dc6w5 soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-2xyfkm soui-select-result-wrapper c-y7dtsv soui-select-wrapper-padding-box c871afg soui-select-wrapper-inner-title-top c8lgj6c soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="c-uki5av soui-select-result"
      >
        <div
          class="c-k3uev7 soui-select-result-text-wrapper"
        >
          <span
            class="c-8qwcyh soui-select-placeholder c-wwn3j7 soui-select-ellipsis"
          >
            <span>
              Select Tag
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-2u7g36 soui-select-icon-wrapper"
      >
        <span
          class="c2o2fpy soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about create 1`] = `
<div>
  <div
    class="ciyxmva soui-select-wrapper-empty c-g0otbt soui-select-wrapper c-1dc6w5 soui-select-clearable c-p7ptgk soui-select-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="c-2xyfkm soui-select-result-wrapper c-y7dtsv soui-select-wrapper-padding-box c871afg soui-select-wrapper-inner-title-top c8lgj6c soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="c-uki5av soui-select-result"
      >
        <div
          class="c-k3uev7 soui-select-result-text-wrapper c-altuh2 soui-select-multiple-result-wrapper"
        >
          <input
            autocomplete="off"
            placeholder="Select Color"
            style="width: 100%;"
            value=""
          />
          <span
            class="c-qpkbmr soui-select-input-mirror"
          />
        </div>
      </div>
      <div
        class="c-2u7g36 soui-select-icon-wrapper"
      >
        <span
          class="c2o2fpy soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about custom render 1`] = `
<div
  style="display: flex; gap: 24px; flex-wrap: wrap;"
>
  <div
    class="ciyxmva soui-select-wrapper-empty c-g0otbt soui-select-wrapper c-1dc6w5 soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-2xyfkm soui-select-result-wrapper c-y7dtsv soui-select-wrapper-padding-box c871afg soui-select-wrapper-inner-title-top c8lgj6c soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="c-uki5av soui-select-result"
      >
        <div
          class="c-k3uev7 soui-select-result-text-wrapper"
        >
          <span
            class="c-8qwcyh soui-select-placeholder c-wwn3j7 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-2u7g36 soui-select-icon-wrapper"
      >
        <span
          class="c2o2fpy soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ciyxmva soui-select-wrapper-empty c-g0otbt soui-select-wrapper c-1dc6w5 soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-2xyfkm soui-select-result-wrapper c-y7dtsv soui-select-wrapper-padding-box c871afg soui-select-wrapper-inner-title-top c8lgj6c soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="c-uki5av soui-select-result"
      >
        <div
          class="c-k3uev7 soui-select-result-text-wrapper"
        >
          <span
            class="c-8qwcyh soui-select-placeholder c-wwn3j7 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-2u7g36 soui-select-icon-wrapper"
      >
        <span
          class="c2o2fpy soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ciyxmva soui-select-wrapper-empty c-g0otbt soui-select-wrapper c-1dc6w5 soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-2xyfkm soui-select-result-wrapper c-y7dtsv soui-select-wrapper-padding-box c871afg soui-select-wrapper-inner-title-top c8lgj6c soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="c-uki5av soui-select-result"
      >
        <div
          class="c-k3uev7 soui-select-result-text-wrapper"
        >
          <span
            class="c-8qwcyh soui-select-placeholder c-wwn3j7 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-2u7g36 soui-select-icon-wrapper"
      >
        <span
          class="c2o2fpy soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about custom result 1`] = `
<div>
  <div
    class="ciyxmva soui-select-wrapper-empty c-g0otbt soui-select-wrapper c-1dc6w5 soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-2xyfkm soui-select-result-wrapper c-y7dtsv soui-select-wrapper-padding-box c871afg soui-select-wrapper-inner-title-top c8lgj6c soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="c-uki5av soui-select-result"
      >
        <div
          class="c-k3uev7 soui-select-result-text-wrapper"
        >
          <span
            class="c-8qwcyh soui-select-placeholder c-wwn3j7 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-2u7g36 soui-select-icon-wrapper"
      >
        <span
          class="c2o2fpy soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about custom unmatch 1`] = `
<div>
  <div
    class="c-g0otbt soui-select-wrapper c-1dc6w5 soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-2xyfkm soui-select-result-wrapper c-y7dtsv soui-select-wrapper-padding-box c871afg soui-select-wrapper-inner-title-top c8lgj6c soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="c-uki5av soui-select-result"
      >
        <div
          class="c-k3uev7 soui-select-result-text-wrapper"
        >
          <span
            class="c-wwn3j7 soui-select-ellipsis"
          >
            I am redddd color
          </span>
        </div>
      </div>
      <div
        class="c-2u7g36 soui-select-icon-wrapper"
      >
        <span
          class="c-1drhra soui-select-clear-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 23C5.924 23 1 18.076 1 12C1 5.924 5.924 1 12 1C18.076 1 23 5.924 23 12C23 18.076 18.076 23 12 23Z"
              fill="currentColor"
            />
            <path
              d="M9.6129 8.2097C9.22061 7.90468 8.65338 7.93241 8.29289 8.29289C7.90237 8.68342 7.90237 9.31658 8.29289 9.70711L10.413 11.828L8.29289 13.9497L8.2097 14.044C7.90468 14.4362 7.93241 15.0035 8.29289 15.364C8.68342 15.7545 9.31658 15.7545 9.70711 15.364L11.828 13.242L13.9497 15.364L14.044 15.4471C14.4362 15.7522 15.0035 15.7244 15.364 15.364C15.7545 14.9734 15.7545 14.3403 15.364 13.9497L13.242 11.828L15.364 9.70711L15.4471 9.6129C15.7522 9.22061 15.7244 8.65338 15.364 8.29289C14.9734 7.90237 14.3403 7.90237 13.9497 8.29289L11.828 10.413L9.70711 8.29289L9.6129 8.2097Z"
              fill="white"
            />
          </svg>
        </span>
        <span
          class="c2o2fpy soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about disabled 1`] = `
<div
  style="display: flex; flex-wrap: wrap; gap: 24px; width: 624px;"
>
  <div
    class="ciyxmva soui-select-wrapper-empty c-g0otbt soui-select-wrapper c9u7vhf soui-select-wrapper-disabled c-1dc6w5 soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="c-2xyfkm soui-select-result-wrapper c-y7dtsv soui-select-wrapper-padding-box c871afg soui-select-wrapper-inner-title-top c8lgj6c soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="c-uki5av soui-select-result"
      >
        <div
          class="c-k3uev7 soui-select-result-text-wrapper"
        >
          <span
            class="c-8qwcyh soui-select-placeholder c-wwn3j7 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-2u7g36 soui-select-icon-wrapper"
      >
        <span
          class="c2o2fpy soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ciyxmva soui-select-wrapper-empty c-g0otbt soui-select-wrapper c-1dc6w5 soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-2xyfkm soui-select-result-wrapper c-y7dtsv soui-select-wrapper-padding-box c871afg soui-select-wrapper-inner-title-top c8lgj6c soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="c-uki5av soui-select-result"
      >
        <div
          class="c-k3uev7 soui-select-result-text-wrapper"
        >
          <span
            class="c-8qwcyh soui-select-placeholder c-wwn3j7 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-2u7g36 soui-select-icon-wrapper"
      >
        <span
          class="c2o2fpy soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="c-g0otbt soui-select-wrapper c9u7vhf soui-select-wrapper-disabled c-1dc6w5 soui-select-clearable c-p7ptgk soui-select-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="c-2xyfkm soui-select-result-wrapper c-y7dtsv soui-select-wrapper-padding-box c871afg soui-select-wrapper-inner-title-top c8lgj6c soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="c-uki5av soui-select-result"
      >
        <div
          class="c-k3uev7 soui-select-result-text-wrapper cmhbq2u soui-select-compressed-wrapper c-altuh2 soui-select-multiple-result-wrapper c-ev771m soui-select-multiple-compressed-wrapper"
        >
          <div
            class="c9jh4zy soui-select-tag ciddcb4 soui-tag-tag c-c2sceh soui-tag-default c15kqx0 soui-tag-bright c-pf4dkq soui-tag-disabled"
            data-soui-type="dark"
            style="opacity: 1;"
          >
            <div
              class="c-b8lkzb soui-tag-wrapper c4eqvvn soui-tag-inline"
            >
              <span
                class="c-abmgax soui-tag-container"
              >
                red
              </span>
            </div>
            <div
              class="c-biemt5 soui-tag-close-icon"
            >
              <span
                class="cp1aoi4 soui-tag-close-icon-wrapper"
              >
                <svg
                  height="10"
                  viewBox="0 0 10 10"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="c9jh4zy soui-select-tag ciddcb4 soui-tag-tag c-c2sceh soui-tag-default c15kqx0 soui-tag-bright c-pf4dkq soui-tag-disabled"
            data-soui-type="dark"
            style="opacity: 1;"
          >
            <div
              class="c-b8lkzb soui-tag-wrapper c4eqvvn soui-tag-inline"
            >
              <span
                class="c-abmgax soui-tag-container"
              >
                orange
              </span>
            </div>
            <div
              class="c-biemt5 soui-tag-close-icon"
            >
              <span
                class="cp1aoi4 soui-tag-close-icon-wrapper"
              >
                <svg
                  height="10"
                  viewBox="0 0 10 10"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <span
            style="display: inline-flex;"
          >
            <div
              class="c9jh4zy soui-select-tag ciddcb4 soui-tag-tag c-c2sceh soui-tag-default c15kqx0 soui-tag-bright"
              style="position: absolute; z-index: -100; user-select: none; contain: layout; opacity: 0; pointer-events: none;"
            >
              <span
                class="c-b8lkzb soui-tag-wrapper"
              >
                +
              </span>
            </div>
            <noscript />
          </span>
        </div>
      </div>
      <div
        class="c-2u7g36 soui-select-icon-wrapper"
      >
        <span
          class="c2o2fpy soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="c-g0otbt soui-select-wrapper c-1dc6w5 soui-select-clearable c-p7ptgk soui-select-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-2xyfkm soui-select-result-wrapper c-y7dtsv soui-select-wrapper-padding-box c871afg soui-select-wrapper-inner-title-top c8lgj6c soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="c-uki5av soui-select-result"
      >
        <div
          class="c-k3uev7 soui-select-result-text-wrapper cmhbq2u soui-select-compressed-wrapper c-altuh2 soui-select-multiple-result-wrapper c-ev771m soui-select-multiple-compressed-wrapper"
        >
          <div
            class="c9jh4zy soui-select-tag ciddcb4 soui-tag-tag c-c2sceh soui-tag-default c15kqx0 soui-tag-bright"
            style="opacity: 1;"
          >
            <div
              class="c-b8lkzb soui-tag-wrapper c4eqvvn soui-tag-inline"
            >
              <span
                class="c-abmgax soui-tag-container"
              >
                red
              </span>
            </div>
            <div
              class="c-biemt5 soui-tag-close-icon"
            >
              <span
                class="cp1aoi4 soui-tag-close-icon-wrapper"
              >
                <svg
                  height="10"
                  viewBox="0 0 10 10"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="c9jh4zy soui-select-tag ciddcb4 soui-tag-tag c-c2sceh soui-tag-default c15kqx0 soui-tag-bright c-pf4dkq soui-tag-disabled"
            style="opacity: 1;"
          >
            <div
              class="c-b8lkzb soui-tag-wrapper c4eqvvn soui-tag-inline"
            >
              <span
                class="c-abmgax soui-tag-container"
              >
                orange
              </span>
            </div>
            <div
              class="c-biemt5 soui-tag-close-icon"
            >
              <span
                class="cp1aoi4 soui-tag-close-icon-wrapper"
              >
                <svg
                  height="10"
                  viewBox="0 0 10 10"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <span
            style="display: inline-flex;"
          >
            <div
              class="c9jh4zy soui-select-tag ciddcb4 soui-tag-tag c-c2sceh soui-tag-default c15kqx0 soui-tag-bright"
              style="position: absolute; z-index: -100; user-select: none; contain: layout; opacity: 0; pointer-events: none;"
            >
              <span
                class="c-b8lkzb soui-tag-wrapper"
              >
                +
              </span>
            </div>
            <noscript />
          </span>
        </div>
      </div>
      <div
        class="c-2u7g36 soui-select-icon-wrapper"
      >
        <span
          class="c-1drhra soui-select-clear-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 23C5.924 23 1 18.076 1 12C1 5.924 5.924 1 12 1C18.076 1 23 5.924 23 12C23 18.076 18.076 23 12 23Z"
              fill="currentColor"
            />
            <path
              d="M9.6129 8.2097C9.22061 7.90468 8.65338 7.93241 8.29289 8.29289C7.90237 8.68342 7.90237 9.31658 8.29289 9.70711L10.413 11.828L8.29289 13.9497L8.2097 14.044C7.90468 14.4362 7.93241 15.0035 8.29289 15.364C8.68342 15.7545 9.31658 15.7545 9.70711 15.364L11.828 13.242L13.9497 15.364L14.044 15.4471C14.4362 15.7522 15.0035 15.7244 15.364 15.364C15.7545 14.9734 15.7545 14.3403 15.364 13.9497L13.242 11.828L15.364 9.70711L15.4471 9.6129C15.7522 9.22061 15.7244 8.65338 15.364 8.29289C14.9734 7.90237 14.3403 7.90237 13.9497 8.29289L11.828 10.413L9.70711 8.29289L9.6129 8.2097Z"
              fill="white"
            />
          </svg>
        </span>
        <span
          class="c2o2fpy soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about filter 1`] = `
<div>
  <div
    class="ciyxmva soui-select-wrapper-empty c-g0otbt soui-select-wrapper c-1dc6w5 soui-select-clearable c-p7ptgk soui-select-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="c-2xyfkm soui-select-result-wrapper c-y7dtsv soui-select-wrapper-padding-box c871afg soui-select-wrapper-inner-title-top c8lgj6c soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="c-uki5av soui-select-result"
      >
        <div
          class="c-k3uev7 soui-select-result-text-wrapper c-altuh2 soui-select-multiple-result-wrapper"
        >
          <input
            autocomplete="off"
            placeholder="Select Color"
            style="width: 100%;"
            value=""
          />
          <span
            class="c-qpkbmr soui-select-input-mirror"
          />
        </div>
      </div>
      <div
        class="c-2u7g36 soui-select-icon-wrapper"
      >
        <span
          class="c2o2fpy soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about format 1`] = `
<div>
  <div
    class="ciyxmva soui-select-wrapper-empty c-g0otbt soui-select-wrapper c-1dc6w5 soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-2xyfkm soui-select-result-wrapper c-y7dtsv soui-select-wrapper-padding-box c871afg soui-select-wrapper-inner-title-top c8lgj6c soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="c-uki5av soui-select-result"
      >
        <div
          class="c-k3uev7 soui-select-result-text-wrapper"
        >
          <span
            class="c-8qwcyh soui-select-placeholder c-wwn3j7 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-2u7g36 soui-select-icon-wrapper"
      >
        <span
          class="c2o2fpy soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about group 1`] = `
<div
  class="ciyxmva soui-select-wrapper-empty c-g0otbt soui-select-wrapper c-1dc6w5 soui-select-clearable"
  data-soui-input-border="true"
  style="width: 240px;"
  tabindex="0"
>
  <div
    class="c-2xyfkm soui-select-result-wrapper c-y7dtsv soui-select-wrapper-padding-box c871afg soui-select-wrapper-inner-title-top c8lgj6c soui-select-wrapper-inner-title-bottom"
  >
    <div
      class="c-uki5av soui-select-result"
    >
      <div
        class="c-k3uev7 soui-select-result-text-wrapper"
      >
        <span
          class="c-8qwcyh soui-select-placeholder c-wwn3j7 soui-select-ellipsis"
        >
          <span>
            Select a city
          </span>
        </span>
      </div>
    </div>
    <div
      class="c-2u7g36 soui-select-icon-wrapper"
    >
      <span
        class="c2o2fpy soui-select-arrow-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about inner title 1`] = `
<div>
  <div
    class="ciyxmva soui-select-wrapper-empty c-g0otbt soui-select-wrapper c-m8x0mv soui-select-wrapper-inner-title c-1dc6w5 soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-2xyfkm soui-select-result-wrapper c-y7dtsv soui-select-wrapper-padding-box c871afg soui-select-wrapper-inner-title-top c8lgj6c soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="c-eiiexq soui-inner-title-wrapper"
      >
        <div
          class="cwj3xif soui-inner-title-title cnopan8 soui-inner-title-top"
        >
          Select Color
        </div>
        <div
          class="cwgy9sm soui-inner-title-place"
        >
          <div
            class="cwj3xif soui-inner-title-title"
          >
            Select Color
          </div>
        </div>
        <div
          class="c-p5x2yg soui-inner-title-content"
        >
          <div
            class="c-uki5av soui-select-result"
          >
            <div
              class="c-k3uev7 soui-select-result-text-wrapper"
            >
              <div
                class="c5wp2wq soui-select-space"
              >
                 
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c-2u7g36 soui-select-icon-wrapper"
      >
        <span
          class="c2o2fpy soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about loading 1`] = `
<div>
  <div
    class="ciyxmva soui-select-wrapper-empty c-g0otbt soui-select-wrapper c-1dc6w5 soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-2xyfkm soui-select-result-wrapper c-y7dtsv soui-select-wrapper-padding-box c871afg soui-select-wrapper-inner-title-top c8lgj6c soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="c-uki5av soui-select-result"
      >
        <div
          class="c-k3uev7 soui-select-result-text-wrapper"
        >
          <span
            class="c-8qwcyh soui-select-placeholder c-wwn3j7 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-2u7g36 soui-select-icon-wrapper"
      >
        <span
          class="c2o2fpy soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about multiple 1`] = `
<div>
  <div
    class="ciyxmva soui-select-wrapper-empty c-g0otbt soui-select-wrapper c-1dc6w5 soui-select-clearable c-p7ptgk soui-select-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-2xyfkm soui-select-result-wrapper c-y7dtsv soui-select-wrapper-padding-box c871afg soui-select-wrapper-inner-title-top c8lgj6c soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="c-uki5av soui-select-result"
      >
        <div
          class="c-k3uev7 soui-select-result-text-wrapper c-altuh2 soui-select-multiple-result-wrapper"
        >
          <span
            class="c-8qwcyh soui-select-placeholder c-wwn3j7 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-2u7g36 soui-select-icon-wrapper"
      >
        <span
          class="c2o2fpy soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about size 1`] = `
<div
  style="display: flex; gap: 24px; align-items: center;"
>
  <div
    class="ciyxmva soui-select-wrapper-empty c-g0otbt soui-select-wrapper cj6mfuo soui-select-wrapper-small c-1dc6w5 soui-select-clearable"
    data-soui-input-border="true"
    style="width: 240px;"
    tabindex="0"
  >
    <div
      class="c-2xyfkm soui-select-result-wrapper c-y7dtsv soui-select-wrapper-padding-box c871afg soui-select-wrapper-inner-title-top c8lgj6c soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="c-uki5av soui-select-result"
      >
        <div
          class="c-k3uev7 soui-select-result-text-wrapper"
        >
          <span
            class="c-8qwcyh soui-select-placeholder c-wwn3j7 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-2u7g36 soui-select-icon-wrapper"
      >
        <span
          class="c2o2fpy soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ciyxmva soui-select-wrapper-empty c-g0otbt soui-select-wrapper c-1dc6w5 soui-select-clearable"
    data-soui-input-border="true"
    style="width: 240px;"
    tabindex="0"
  >
    <div
      class="c-2xyfkm soui-select-result-wrapper c-y7dtsv soui-select-wrapper-padding-box c871afg soui-select-wrapper-inner-title-top c8lgj6c soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="c-uki5av soui-select-result"
      >
        <div
          class="c-k3uev7 soui-select-result-text-wrapper"
        >
          <span
            class="c-8qwcyh soui-select-placeholder c-wwn3j7 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-2u7g36 soui-select-icon-wrapper"
      >
        <span
          class="c2o2fpy soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ciyxmva soui-select-wrapper-empty c-g0otbt soui-select-wrapper cj2kkc4 soui-select-wrapper-large c-1dc6w5 soui-select-clearable"
    data-soui-input-border="true"
    style="width: 240px;"
    tabindex="0"
  >
    <div
      class="c-2xyfkm soui-select-result-wrapper c-y7dtsv soui-select-wrapper-padding-box c871afg soui-select-wrapper-inner-title-top c8lgj6c soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="c-uki5av soui-select-result"
      >
        <div
          class="c-k3uev7 soui-select-result-text-wrapper"
        >
          <span
            class="c-8qwcyh soui-select-placeholder c-wwn3j7 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-2u7g36 soui-select-icon-wrapper"
      >
        <span
          class="c2o2fpy soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about tree 1`] = `
<div>
  <div
    class="ciyxmva soui-select-wrapper-empty c-g0otbt soui-select-wrapper c-1dc6w5 soui-select-clearable"
    data-soui-input-border="true"
    style="width: 260px;"
    tabindex="0"
  >
    <div
      class="c-2xyfkm soui-select-result-wrapper c-y7dtsv soui-select-wrapper-padding-box c871afg soui-select-wrapper-inner-title-top c8lgj6c soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="c-uki5av soui-select-result"
      >
        <div
          class="c-k3uev7 soui-select-result-text-wrapper"
        >
          <span
            class="c-8qwcyh soui-select-placeholder c-wwn3j7 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-2u7g36 soui-select-icon-wrapper"
      >
        <span
          class="c2o2fpy soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about tree more 1`] = `
<div>
  <div
    class="ciyxmva soui-select-wrapper-empty c-g0otbt soui-select-wrapper c-1dc6w5 soui-select-clearable"
    data-soui-input-border="true"
    style="width: 260px;"
  >
    <div
      class="c-2xyfkm soui-select-result-wrapper c-y7dtsv soui-select-wrapper-padding-box c871afg soui-select-wrapper-inner-title-top c8lgj6c soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="c-uki5av soui-select-result"
      >
        <div
          class="c-k3uev7 soui-select-result-text-wrapper"
        >
          <input
            autocomplete="off"
            placeholder="Select Color"
            style="width: 100%;"
            value=""
          />
          <span
            class="c-qpkbmr soui-select-input-mirror"
          />
        </div>
      </div>
      <div
        class="c-2u7g36 soui-select-icon-wrapper"
      >
        <span
          class="c2o2fpy soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;
